src/components/MainNav/AppList/AppList.css
/**
 * App Switcher
 */

@import '@folio/stripes-components/lib/variables.css';

:root {
  --padding-for-header: 66px;
}

.appList {
  display: flex;
}

/**
 * Nav dropdown toggle
 **/

.dropdownToggleLabel {
  display: none;
}

/**
 * Nav List
 */
.navItemsList {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
}

/**
 * Nav Dropdown
 */

.navListDropdownWrap,
.navListDropdown {
  display: block;
}

.navListDropdown {
  z-index: 200;
}

.navListDropdown > div {
  overflow-y: scroll;
}

.dropdownBody {
  width: 100%;
  outline: 0;
  padding: var(--gutter-static-one-third) var(--gutter-static);
}

.dropdownList {
  margin: 0;
  max-height: calc(100vh - var(--padding-for-header));
}

.dropdownListItem {
  display: flex;
  align-items: center;
}

.dropdownListItemLabel {
  padding: 0 4px;
  min-width: 200px;
  font-weight: 600;
}

[dir="rtl"] .dropdownListItemLabel {
  text-align: right;
}

.dropdownListItemDescription {
  color: var(--label-color);
  display: none;
}

.dropdownHeader {
  padding: 10px 10px 5px;
}

/**
 * Nav Item
**/
.navItem {
  display: none;
}

/**
 * Focus trap
 */
.focusTrap {
  position: absolute;
  clip: rect(1px, 1px, 1px, 1px);
}

/**
 * Responsive
 */

/* A bit of a hack to force tether to 100% width on mobile.. */
@media (--small) {
  .navListDropdown,
  .navListDropdown > div {
    left: 0 !important;
    right: 0 !important;
    width: 100% !important;
  }
}

@media (--medium-up) {
  .dropdownListItemDescription {
    display: block;
  }

  .dropdownToggleLabel {
    display: flex;
  }
}

@media (--large-up) {
  .navItemsList {
    display: flex;
  }
}

/**
 * Adjust visible nav items with CSS for now
 * Should be made dynamic later on
**/

@media screen and (min-width: 768px) {
  .navItem:nth-child(-n+3) {
    display: block;
  }
}

@media screen and (min-width: 980px) {
  .navItem:nth-child(-n+5) {
    display: block;
  }
}

@media screen and (min-width: 1200px) {
  .navItem:nth-child(-n+6) {
    display: block;
  }
}

@media screen and (min-width: 1500px) {
  .navItem:nth-child(-n+9) {
    display: block;
  }
}

@media screen and (min-width: 1700px) {
  .navItem:nth-child(-n+11) {
    display: block;
  }
}

